2010-08-18  Sancho Lerena <slerena@artica.es>

	* pandora_console.redhat.spec: Some minimal updates on Redhat RPM
	about the logrotate.

2010-07-02  Sancho Lerena <slerena@artica.es>

        * pandora_console.redhat.spec: Patches applied from the contribution        
        from KIKUCHI Koichiro, thanks Kikuchi!

	* extras/lodrotate: Specific logrotate file for Redhat systems.

2010-07-02  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_rss.php
	operation/events/events_marquee.php
	operation/events/events.php: Merged from trunk.
	Fixed several bugs into events viewer and events 
	rss file. Apply Ip restriction to API Ip's List 
	to rss and marquee files. Bugfix: 3017263

2010-06-21  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.main.php
	godmode/reporting/graph_builder.php
	godmode/reporting/graph_builder.graph_editor.php
	godmode/reporting/graph_builder.preview.php: Merged from trunk.
	Rewritted the combined graphs editor

2010-06-30  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.php: Merged from trunk. Changed 
	the Server and All text on the events filter to use gettext. 

2010-06-30  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.php: Merged fix from trunk.
	Fixed the agent filter. Now the pagination keep the 
	agent and shows the name of the agent in the 

2010-06-30  SAncho Lerena <slerena@artica.es>

	* pandora_console.redhat.spec: Specific spec for Redhat.

2010-06-23  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Continue drawing combined charts if modules
	  without data are found.

2010-06-18  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/user_list.php: Merged fix from
	trunk. Fixed the bug of delete agents in IExplorer
	and added deleted confirm for bug: 3017261

2010-06-17  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/map_builder.php: Merged fix from trunk
	for bug 3017262
